--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "firebase": "^6.4.0",
     "js-cookie": "^2.2.1",
     "vue": "^2.6.10",
-    "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.2",
+    "vuetify": "^2.0.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
@@ -24,8 +24,11 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
+    "sass": "^1.17.4",
     "sass-loader": "^7.2.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.2.2"
   },
   "eslintConfig": {
     "root": true,
